--- a/powershell-preview-bin/PKGBUILD
+++ b/powershell-preview-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=powershell-preview-bin
 _pkgver=7.3.0-preview.5
 _version=7-preview
 pkgver=${_pkgver/-/.}
-pkgrel=1
+pkgrel=2
 pkgdesc='A cross-platform automation and configuration tool/framework (binary preview package)'
 arch=('x86_64')
 url='https://github.com/Powershell/Powershell'
@@ -14,11 +14,18 @@ depends=('krb5' 'gcc-libs' 'glibc' 'lttng-ust' 'zlib' 'openssl' 'icu')
 provides=('powershell')
 options=(staticlibs !strip)
 install=powershell-preview.install
-sha256sums=('C6294B5E3F4CCD0BE66FBBAA85C712A6E8EA40B6B1EF21B2C0FA75665B2A2BBD')
-source=("https://github.com/PowerShell/PowerShell/releases/download/v${_pkgver}/powershell-preview_${_pkgver}-1.deb_amd64.deb")
+source=("https://github.com/PowerShell/PowerShell/releases/download/v${_pkgver}/powershell-preview_${_pkgver}-1.deb_amd64.deb"
+        "Exodia-PowerShell.desktop"
+        "Exodia-PowerShell.svg"
+        )
 
+sha256sums=('C6294B5E3F4CCD0BE66FBBAA85C712A6E8EA40B6B1EF21B2C0FA75665B2A2BBD'
+            'SKIP'
+            'SKIP'
+            )
 
-package() {
+package() {  
+
   bsdtar xf data.tar.gz
 
   mv usr "${pkgdir}"
@@ -29,4 +36,10 @@ package() {
   rm -rf usr/local
 
   chmod 755 opt/microsoft/powershell/$_version/pwsh
+
+  install -m644 -D ${srcdir}/Exodia-PowerShell.desktop ${pkgdir}/usr/share/applications/Exodia-PowerShell.desktop
+  
+  mkdir -p ${pkgdir}/usr/share/pixmaps
+  cp ${srcdir}/Exodia-PowerShell.svg ${pkgdir}/usr/share/pixmaps/
+
 }
