--- a/powershell-preview-bin/PKGBUILD
+++ b/powershell-preview-bin/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=powershell-preview-bin
 _pkgver=7.3.0-preview.5
 _version=7-preview
 pkgver=${_pkgver/-/.}
-pkgrel=3
+pkgrel=4
 pkgdesc='A cross-platform automation and configuration tool/framework (binary preview package)'
 arch=('x86_64')
 url='https://github.com/Powershell/Powershell'
@@ -17,9 +17,11 @@ install=powershell-preview.install
 source=("https://github.com/PowerShell/PowerShell/releases/download/v${_pkgver}/powershell-preview_${_pkgver}-1.deb_amd64.deb"
         "Exodia-PowerShell.desktop"
         "Exodia-PowerShell.svg"
+        "bsp-powershell"
         )
 
 sha256sums=('C6294B5E3F4CCD0BE66FBBAA85C712A6E8EA40B6B1EF21B2C0FA75665B2A2BBD'
+            'SKIP'
             'SKIP'
             'SKIP'
             )
@@ -41,5 +43,6 @@ package() {
   
   mkdir -p ${pkgdir}/usr/share/pixmaps
   cp ${srcdir}/Exodia-PowerShell.svg ${pkgdir}/usr/share/pixmaps/
+  cp ${srcdir}/bsp-powershell ${pkgdir}/usr/bin/
 
 }
