--- a/powershell-preview-bin/Exodia-PowerShell.desktop
+++ b/powershell-preview-bin/Exodia-PowerShell.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=PowerShell
 Comment= A PowerShell preview bin
-Exec=alacritty --config-file ~/.config/bspwm/alacritty/alacritty.yml -e pwsh-preview
+Exec=/usr/bin/bsp-powershell
 Icon=Exodia-PowerShell
 Terminal=false
 Categories=System;TerminalEmulator
